# pyegcdb

./: .gitignore  LICENSE  README.md  lmc_cepheids.csv  pilot_download.py  pilot_find_target.py  pilot_star_find.py  ping_snipplet.py  pyproject.toml  test_Cone.py  test_LC.py  test_LMC.py
src/cepheid_client/: core.py
src/pyegcdb/: __init__.py  core.py
