[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyegcdb"
version = "0.1.0a1"
description = "Python client for the Extragalactic Cepheid Database of the Konkoly Observatory"
readme = "README.md"
authors = [
    { name = "Dóra Tarczay-Nehéz", email = "tarczaynehez.dora@csfk.org" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "astropy>=5.0.0"  # For astronomical things
]

[tool.setuptools.packages.find]
where = ["src"] 